--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@supabase/supabase-js": "^2.49.4",
     "expo": "~52.0.42",
     "expo-blur": "^14.0.3",
     "expo-constants": "^17.0.5",
@@ -28,7 +30,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "^0.19.13"
+    "react-native-web": "^0.19.13",
+    "undefined": "react-native-url-polyfill/auto"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
