--- a/app.json
+++ b/app.json
@@ -16,9 +16,23 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "4cf46a3d-b937-45f1-acfc-94fc6ce24da3"
+      }
+    },
+    "owner": "jaxor",
+    "android": {
+      "package": "com.limpiven.limpiven"
     }
   }
 }
