--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^3.0.2",
-    "expo": "~52.0.42",
+    "expo": "~52.0.46",
     "expo-blur": "^14.0.3",
-    "expo-constants": "^17.0.5",
+    "expo-constants": "~17.0.8",
     "expo-font": "^13.0.3",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
     "expo-router": "~4.0.20",
-    "expo-splash-screen": "~0.29.22",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "^2.0.1",
     "expo-system-ui": "~4.0.9",
     "lucide-react-native": "^0.475.0",
@@ -35,7 +35,12 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.13",
     "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-picker/picker": "2.9.0"
+    "@react-native-picker/picker": "2.9.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "expo-location": "~18.0.10",
+    "expo-notifications": "~0.29.14",
+    "expo-device": "~7.0.3",
+    "expo-dev-client": "~5.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
