new file:   android/.gitignore 	new file:   android/app/build.gradle 	new file:   android/app/debug.keystore 	new file:   android/app/proguard-rules.pro 	new file:   android/app/src/debug/AndroidManifest.xml 	new file:   android/app/src/main/AndroidManifest.xml 	new file:   android/app/src/main/java/com/limpiven/limpiven/MainActivity.kt 	new file:   android/app/src/main/java/com/limpiven/limpiven/MainApplication.kt 	new file:   android/app/src/main/res/drawable-hdpi/splashscreen_logo.png 	new file:   android/app/src/main/res/drawable-mdpi/splashscreen_logo.png 	new file:   android/app/src/main/res/drawable-xhdpi/splashscreen_logo.png 	new file:   android/app/src/main/res/drawable-xxhdpi/splashscreen_logo.png 	new file:   android/app/src/main/res/drawable-xxxhdpi/splashscreen_logo.png 	new file:   android/app/src/main/res/drawable/ic_launcher_background.xml 	new file:   android/app/src/main/res/drawable/rn_edit_text_material.xml 	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher.webp 	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher_round.webp 	new file:   android/app/src/main/res/mipmap-mdpi/ic_launcher.webp 	new file:   android/app/src/main/res/mipmap-mdpi/ic_launcher_round.webp 	new file:   android/app/src/main/res/mipmap-xhdpi/ic_launcher.webp 	new file:   android/app/src/main/res/mipmap-xhdpi/ic_launcher_round.webp 	new file:   android/app/src/main/res/mipmap-xxhdpi/ic_launcher.webp 	new file:   android/app/src/main/res/mipmap-xxhdpi/ic_launcher_round.webp 	new file:   android/app/src/main/res/mipmap-xxxhdpi/ic_launcher.webp 	new file:   android/app/src/main/res/mipmap-xxxhdpi/ic_launcher_round.webp 	new file:   android/app/src/main/res/values/colors.xml 	new file:   android/app/src/main/res/values/strings.xml 	new file:   android/app/src/main/res/values/styles.xml 	new file:   android/build.gradle 	new file:   android/gradle.properties 	new file:   android/gradle/wrapper/gradle-wrapper.jar 	new file:   android/gradle/wrapper/gradle-wrappe

--- a/app.json
+++ b/app.json
@@ -1,13 +1,18 @@
 {
   "expo": {
-    "name": "bolt-expo-nativewind",
-    "slug": "bolt-expo-nativewind",
+    "name": "limpiven",
+    "slug": "limpiven",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "splash":{
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
     "ios": {
       "supportsTablet": true
     },
@@ -17,7 +22,19 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-splash-screen",
+        {
+          "backgroundColor": "#FFFFFF",
+          "image": "./assets/icon.png",
+          "dark": {
+            "image": "./assets/icon.png",
+            "backgroundColor": "#0c0a09"
+          },
+          "imageWidth": 200
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
@@ -27,7 +44,7 @@
         "origin": false
       },
       "eas": {
-        "projectId": "4cf46a3d-b937-45f1-acfc-94fc6ce24da3"
+        "projectId": "3411d866-fc8d-4dc1-9fda-11b45c501d84"
       }
     },
     "owner": "jaxor",
