--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "private": true,
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
-    "android": "expo start --android",
+    "android": "expo run:android",
     "build:android": "expo build:android",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
@@ -40,7 +41,10 @@
     "expo-location": "~18.0.10",
     "expo-notifications": "~0.29.14",
     "expo-device": "~7.0.3",
-    "expo-dev-client": "~5.0.20"
+    "expo-dev-client": "~5.0.20",
+    "react-native-svg": "15.8.0",
+    "expo-image-picker": "~16.0.6",
+    "react-native-get-random-values": "~1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
