--- a/app.json
+++ b/app.json
@@ -27,9 +27,9 @@
         "expo-splash-screen",
         {
           "backgroundColor": "#FFFFFF",
-          "image": "./assets/icon.png",
+          "image": "./assets/images/icon.png",
           "dark": {
-            "image": "./assets/icon.png",
+            "image": "./assets/images/icon.png",
             "backgroundColor": "#0c0a09"
           },
           "imageWidth": 200
