--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
 {
-  "name": "limpiven",
+  "name": "cleaning-service-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
-    "android": "expo run:android",
+    "android": "expo start --android",
     "build:android": "expo build:android",
-    "lint": "expo lint",
-    "ios": "expo run:ios"
+    "lint": "expo lint"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-picker/picker": "2.9.0",
     "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^3.0.2",
     "expo": "~52.0.46",
     "expo-blur": "^14.0.3",
     "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.20",
-    "expo-device": "~7.0.3",
     "expo-font": "^13.0.3",
-    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
-    "expo-location": "~18.0.10",
-    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "^2.0.1",
@@ -36,15 +28,19 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-get-random-values": "~1.11.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "^0.19.13"
+    "react-native-web": "^0.19.13",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-picker/picker": "2.9.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "expo-location": "~18.0.10",
+    "expo-notifications": "~0.29.14",
+    "expo-device": "~7.0.3",
+    "expo-dev-client": "~5.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
