--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "expo-location": "~18.0.10",
     "expo-notifications": "~0.29.14",
     "expo-device": "~7.0.3",
-    "expo-dev-client": "~5.0.20"
+    "expo-dev-client": "~5.0.20",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
