--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
           "image": "./assets/images/splash-icon.png",
           "dark": {
             "image": "./assets/images/splash-icon-dark.png",
-            "backgroundColor": "#000000"
+            "backgroundColor": "#161a1d"
           },
           "imageWidth": 200
         }
